CSS and blog update
Added color elements that may change again
Other CSS update
Changed front page
Re assign extends on tags, authors, blog
added blog post from before, still not done

--- a/output/jottings-from-the-gathering-scratch-2018.html
+++ b/output/jottings-from-the-gathering-scratch-2018.html
@@ -17,13 +17,13 @@
 
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Jottings from the Gathering - Scratch 2018"/>
-    <meta property="og:description" content="Late July 2018, I got a chance to travel to Boston/Cambridge to attend the Scratch Conference. This is my second time attending the conference, the last time I visited, I had no experience with Scratch and was unaware of its community. In that first visit, my goal was to …"/>
+    <meta property="og:description" content=""/>
     <meta property="og:site_name" content="jorgegarcia.io" />
     <meta property="og:url" content="/jottings-from-the-gathering-scratch-2018.html"/>
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Jottings from the Gathering - Scratch 2018">
-    <meta name="twitter:description" content="Late July 2018, I got a chance to travel to Boston/Cambridge to attend the Scratch Conference. This is my second time attending the conference, the last time I visited, I had no experience with Scratch and was unaware of its community. In that first visit, my goal was to …">
+    <meta name="twitter:description" content="">
     <meta name="twitter:url" content="/jottings-from-the-gathering-scratch-2018.html">
 
     <!-- Feed -->
@@ -49,11 +49,11 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green" style="font-weight: bold;"><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/projects.html">projects</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/gallery.html">gallery</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/me.html">me</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-purple" style="font-weight: bold;"><a href="/category/blog.html">Blog</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/projects.html">projects</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/gallery.html">gallery</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/library.html">library</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/me.html">me</a></li>
           </ul>
         </nav>
       </header>
@@ -132,13 +132,6 @@
         </footer>
       </div>
     </article>
-
-
-    <footer id="footer">
-      <div id="footer-copyright" class="w3-center w3-small w3-text-grey w3-padding-48">
-        <span>&copy;  Jorge Garcia </span>
-      </div>
-    </footer>
 
 
 
