--- a/output/pages/library.html
+++ b/output/pages/library.html
@@ -47,11 +47,11 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green" ><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/projects.html">projects</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/gallery.html">gallery</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/me.html">me</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-purple" ><a href="/category/blog.html">Blog</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/projects.html">projects</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/gallery.html">gallery</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/library.html">library</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/me.html">me</a></li>
           </ul>
         </nav>
       </header>
@@ -83,13 +83,6 @@
         
       </div>
     </article>
-
-
-    <footer id="footer">
-      <div id="footer-copyright" class="w3-center w3-small w3-text-grey w3-padding-48">
-        <span>&copy;  Jorge Garcia </span>
-      </div>
-    </footer>
 
 
 
