continued blog transfer

--- a/output/cardio-audio-jog-my-brain.html
+++ b/output/cardio-audio-jog-my-brain.html
@@ -50,10 +50,9 @@
         <nav id="header-menu">
           <ul>
             <li class="w3-bottombar w3-border-white w3-hover-border-purple" style="font-weight: bold;"><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/projects.html">projects</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/gallery.html">gallery</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/me.html">me</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/about.html">about</a></li>
           </ul>
         </nav>
       </header>
@@ -73,6 +72,9 @@
           <div>
             <span class="w3-tag w3-light-grey w3-text-purple w3-hover-red">
               <a href="/tag/gram.html" title="All articles with Gram tag">#gram</a>
+            </span>
+            <span class="w3-tag w3-light-grey w3-text-purple w3-hover-red">
+              <a href="/tag/bikeride.html" title="All articles with Bikeride tag">#bikeride</a>
             </span>
           </div>
         </div>
