--- a/output/welcome-to-my-site.html
+++ b/output/welcome-to-my-site.html
@@ -50,10 +50,9 @@
         <nav id="header-menu">
           <ul>
             <li class="w3-bottombar w3-border-white w3-hover-border-purple" style="font-weight: bold;"><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/projects.html">projects</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/gallery.html">gallery</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/me.html">me</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/about.html">about</a></li>
           </ul>
         </nav>
       </header>
@@ -75,7 +74,7 @@
               <a href="/tag/personal.html" title="All articles with Personal tag">#personal</a>
             </span>
             <span class="w3-tag w3-light-grey w3-text-purple w3-hover-red">
-              <a href="/tag/work.html" title="All articles with Work tag">#work</a>
+              <a href="/tag/worklife.html" title="All articles with Worklife tag">#worklife</a>
             </span>
           </div>
         </div>
