--- a/output/to-the-end-of-il-62-for-some-plants.html
+++ b/output/to-the-end-of-il-62-for-some-plants.html
@@ -50,10 +50,9 @@
         <nav id="header-menu">
           <ul>
             <li class="w3-bottombar w3-border-white w3-hover-border-purple" style="font-weight: bold;"><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/projects.html">projects</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/gallery.html">gallery</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/me.html">me</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/about.html">about</a></li>
           </ul>
         </nav>
       </header>
