--- a/output/index.html
+++ b/output/index.html
@@ -59,8 +59,7 @@
     <div class="w3-row w3-light-grey w3-border-bottom">
       <aside id="intro" class="w3-container w3-center w3-padding-32">
         <div>
-          <span id="intro-description">Technology advisor and educator.
-                         I like to break things down and make things.</span>
+          <span id="intro-description">Hello, I'm Jorge.</span>
           <ul class="social" style="margin: 0; margin-top: 10px; padding: 0;">
             <li><a class="sc-twitter" href="http://twitter.com/yorickgarcia" target="_blank"><i class="fa fa-twitter"></i></a></li>
             <li><a class="sc-linkedin" href="http://linkedin.com/yorickgarcia" target="_blank"><i class="fa fa-linkedin"></i></a></li>
@@ -68,11 +67,15 @@
             <li><a class="sc-reddit" href="http://reddit.com/u/yorickgarcia" target="_blank"><i class="fa fa-reddit"></i></a></li>
             <li><a class="sc-instagram" href="http://instagram.com/yorickgarcia" target="_blank"><i class="fa fa-instagram"></i></a></li>
           </ul>
-          <span id="intro-description">Jorge like forge or gorge.</span>
+          <div style="max-width: 860px">
+          <span id="intro-description">I'm a technology advisor and educator from Chicago.</span>
+          <span id="intro-description">Jorge like forge or gorge. I like to break things down and make things. Shoot me an email or @me on Twitter.</span>
+        </div>
         </div>
         <div style="line-height: 180px;">
           <a href="" target="_blank"><img class="avatar" alt="Avatar" src="" onerror="this.src='theme/images/avatar.png'"></a>
         </div>
+        
       </aside>
     </div>
 
