--- a/output/jottings-from-the-gathering-scratch-2018.html
+++ b/output/jottings-from-the-gathering-scratch-2018.html
@@ -102,8 +102,7 @@
                 <a href=""><img style="width: 60px; height: 60px;" src="" onerror="this.src='theme/images/avatar.png'" alt="Avatar"></a>
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href=""><span id="author-name" class="w3-hover-text-dark-grey">Jorge Garcia</span></a>
-                  <p id="author-story">Technology advisor and educator.
-                         I like to break things down and make things.</p>
+                  <p id="author-story">I'm a technology advisor and educator from Chicago.</p>
                 </div>
               </div>
             </div>
