--- a/output/index.html
+++ b/output/index.html
@@ -60,16 +60,12 @@
       <aside id="intro" class="w3-container w3-center w3-padding-32">
         <div>
           <span id="intro-description">Hello, I'm Jorge.</span>
-          <ul class="social" style="margin: 0; margin-top: 10px; padding: 0;">
-            <li><a class="sc-twitter" href="http://twitter.com/yorickgarcia" target="_blank"><i class="fa fa-twitter"></i></a></li>
-            <li><a class="sc-linkedin" href="http://linkedin.com/yorickgarcia" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-            <li><a class="sc-github" href="http://github.com/yorickgarcia" target="_blank"><i class="fa fa-github"></i></a></li>
-            <li><a class="sc-reddit" href="http://reddit.com/u/yorickgarcia" target="_blank"><i class="fa fa-reddit"></i></a></li>
-            <li><a class="sc-instagram" href="http://instagram.com/yorickgarcia" target="_blank"><i class="fa fa-instagram"></i></a></li>
-          </ul>
+          <br><br>
+          <span id="intro-description">That's Jorge like forge or gorge.</span>
           <div style="max-width: 860px">
-          <span id="intro-description">I'm a technology advisor and educator from Chicago.</span>
-          <span id="intro-description">Jorge like forge or gorge. I like to break things down and make things. Shoot me an email or @me on Twitter.</span>
+          <span id="intro-description">I'm a technology advisor and educator from Chicago. I like to break things down and make things.</span>
+          <br><br>
+          <span id="intro-description">To best reach me, shoot me an email or @me on Twitter.</span>
         </div>
         </div>
         <div style="line-height: 180px;">
@@ -78,6 +74,18 @@
         
       </aside>
     </div>
+    <footer id="footer">
+      <div id="footer-copyright" class="w3-center w3-small w3-text-black w3-padding-8">
+          <ul class="social" style="margin: 0; margin-top: 10px; margin-bottom: 48px; padding: 0;">
+              <li><a class="sc-twitter" href="http://twitter.com/yorickgarcia" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              <li><a class="sc-linkedin" href="http://linkedin.com/yorickgarcia" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a class="sc-github" href="http://github.com/yorickgarcia" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a class="sc-reddit" href="http://reddit.com/u/yorickgarcia" target="_blank"><i class="fa fa-reddit"></i></a></li>
+              <li><a class="sc-instagram" href="http://instagram.com/yorickgarcia" target="_blank"><i class="fa fa-instagram"></i></a></li>
+            </ul>
+      </div>
+    </footer>
+
 
 
   </body>
