--- a/output/welcome-to-my-site.html
+++ b/output/welcome-to-my-site.html
@@ -101,7 +101,7 @@
                 <a href=""><img style="width: 60px; height: 60px;" src="" onerror="this.src='theme/images/avatar.png'" alt="Avatar"></a>
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href=""><span id="author-name" class="w3-hover-text-dark-grey">Jorge Garcia</span></a>
-                  <p id="author-story">I'm a technology advisor and educator from Chicago.</p>
+                  <p id="author-story">I'm a technology advisor and educator from Chicago. I like to break things down and make things.</p>
                 </div>
               </div>
             </div>
@@ -129,6 +129,18 @@
         </footer>
       </div>
     </article>
+
+    <footer id="footer">
+      <div id="footer-copyright" class="w3-center w3-small w3-text-black w3-padding-8">
+          <ul class="social" style="margin: 0; margin-top: 10px; margin-bottom: 48px; padding: 0;">
+              <li><a class="sc-twitter" href="http://twitter.com/yorickgarcia" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              <li><a class="sc-linkedin" href="http://linkedin.com/yorickgarcia" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a class="sc-github" href="http://github.com/yorickgarcia" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a class="sc-reddit" href="http://reddit.com/u/yorickgarcia" target="_blank"><i class="fa fa-reddit"></i></a></li>
+              <li><a class="sc-instagram" href="http://instagram.com/yorickgarcia" target="_blank"><i class="fa fa-instagram"></i></a></li>
+            </ul>
+      </div>
+    </footer>
 
 
 
