more style changes

--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap" rel="stylesheet">
     <title>About &ndash; jorgegarcia.io</title>
 
     <!-- Meta -->
@@ -47,10 +47,10 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-purple" ><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/gallery.html">gallery</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/about.html">about</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple" ><a href="/category/blog.html">Blog</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/gallery.html">gallery</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/library.html">library</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/about.html">about</a></li>
           </ul>
         </nav>
       </header>
@@ -75,17 +75,39 @@
       <div class="col-main w3-container">
         <section id="content">
           <hr>
-<h2>Social</h2>
-<p>@yorickgarcia</p>
-<ul>
-<li><a href="twitter.com/yorickgarcia">Twitter</a></li>
-<li>LinkedIn</li>
-<li>GitHub</li>
-<li>Instagram</li>
-<li>GitHub</li>
-</ul>
+<h2>Contact Info</h2>
+<p><strong>e-mail and Hangouts:</strong> <a href="mailto:jorge@jorgegarcia.io">jorge@jorgegarcia.io</a></p>
+<p>@<strong>yorickgarcia</strong> everywhere publicly online. See icons at footer for links from popular sites.<br>
+<details style="margin-top:-1rem">
+    <summary>...why yorick?</summary>
+    <div style="background:#f3f3f3; padding:1rem;">
+        <p>A night on <a href="https://www.behindthename.com/name/yorick">Behind the Name</a> and jorgegarcia is usually taken obviously.</p>
+        <ul>
+                <li><b>JORGE</b> - Spanish and Portuguese form of GEORGE.</li>
+                <ul>
+                    <li><b>GEORGE</b> - English, Romanian
+    From the Greek name Γεωργιος (Georgios), which was derived from the Greek word γεωργος (georgos) meaning "farmer, earthworker", itself derived from the elements γη (ge) "earth" and εργον (ergon) "work".</li>
+                </ul>
+            </ul>
+            <ul>
+                <li><b>YORICK</b> - Literature, English, and Dutch altered form of JØRG. Shakespeare used this name for a deceased court jester in his play 'Hamlet' (1600).</li>
+                <ul>
+                    <li><b>JØRG</b> - Danish and Norwegian short form of JØRGEN.</li>
+                    <ul>
+                        <li><b>JØRGEN</b> - Danish and Norwegian form of JÜRGEN.</li>
+                        <ul>
+                            <li><b>JÜRGEN</b> - Low German form of GEORGE.</li>
+                            <ul>
+                                <li><b>GEORGE</b> - English, Romanian</li>
+                            </ul>
+                        </ul>
+                    </ul>
+                </ul>
+            </ul>
+    </div>
+</details></p>
 <hr>
-<h1>CV</h1>
+<h2>CV</h2>
 <hr>
 <p><a href="tbd">Personal Bio</a></p>
         </section>
