--- a/output/index.html
+++ b/output/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap" rel="stylesheet">
     <title>jorgegarcia.io</title>
 
     <!-- Meta -->
@@ -47,10 +47,10 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-purple" ><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/gallery.html">gallery</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="/pages/about.html">about</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple" ><a href="/category/blog.html">Blog</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/gallery.html">gallery</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/library.html">library</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/about.html">about</a></li>
           </ul>
         </nav>
       </header>
@@ -65,7 +65,7 @@
           <div style="max-width: 860px">
           <span id="intro-description">I'm a technology advisor and educator from Chicago. I like to break things down and make things.</span>
           <br><br>
-          <span id="intro-description">To best reach me, shoot me an email or @me on Twitter.</span>
+          <span id="intro-description">To best reach me, shoot me an email at jorge@jorgegarcia.io or send me a text.</span>
         </div>
         </div>
         <div style="line-height: 180px;">
