front page and about updates

--- a/output/index.html
+++ b/output/index.html
@@ -47,10 +47,10 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple" ><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/gallery.html">gallery</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/about.html">about</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green" ><a href="/category/blog.html">Blog</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/gallery.html">gallery</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/library.html">library</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about.html">about</a></li>
           </ul>
         </nav>
       </header>
@@ -63,9 +63,11 @@
           <br><br>
           <span id="intro-description">That's Jorge like forge or gorge.</span>
           <div style="max-width: 860px">
-          <span id="intro-description">I'm a technology advisor and educator from Chicago. I like to break things down and make things.</span>
+          <span id="intro-description">I'm a technology advisor and educator from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+          <span id="intro-description">I like to break things down and make things.</span>
           <br><br>
-          <span id="intro-description">To best reach me, shoot me an email at jorge@jorgegarcia.io or send me a text.</span>
+          <span id="intro-description">To best reach me, shoot me an <a style="color: #673ab7" href="http://makersinchicago.org">email</a></span>
+          <span id="intro-description">or send me a text.</span>
         </div>
         </div>
         <div style="line-height: 180px;">
