--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -47,10 +47,10 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple" ><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/gallery.html">gallery</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/about.html">about</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green" ><a href="/category/blog.html">Blog</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/gallery.html">gallery</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/library.html">library</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about.html">about</a></li>
           </ul>
         </nav>
       </header>
@@ -81,7 +81,7 @@
 <details style="margin-top:-1rem">
     <summary>...why yorick?</summary>
     <div style="background:#f3f3f3; padding:1rem;">
-        <p>A night on <a href="https://www.behindthename.com/name/yorick">Behind the Name</a> and jorgegarcia is usually taken obviously.</p>
+        <p>A night on <a href="https://www.behindthename.com/name/yorick">Behind the Name</a> and @jorgegarcia is usually taken so I gave up on trying to get it.</p>
         <ul>
                 <li><b>JORGE</b> - Spanish and Portuguese form of GEORGE.</li>
                 <ul>
