--- a/output/saving-the-planet-a-stroll-with-the-boys.html
+++ b/output/saving-the-planet-a-stroll-with-the-boys.html
@@ -49,10 +49,10 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple" style="font-weight: bold;"><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/gallery.html">gallery</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/about.html">about</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green" style="font-weight: bold;"><a href="/category/blog.html">Blog</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/gallery.html">gallery</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/library.html">library</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about.html">about</a></li>
           </ul>
         </nav>
       </header>
@@ -114,7 +114,7 @@ Original Date – 8-4-2019</p>
                 <a href=""><img style="width: 60px; height: 60px;" src="" onerror="this.src='theme/images/avatar.png'" alt="Avatar"></a>
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href=""><span id="author-name" class="w3-hover-text-dark-grey">Jorge Garcia</span></a>
-                  <p id="author-story">I'm a technology advisor and educator from Chicago. I like to break things down and make things.</p>
+                  <p id="author-story">I'm a technology advisor and educator from</p>
                 </div>
               </div>
             </div>
