style changes to blog cards

--- a/output/mining-into-twenty18.html
+++ b/output/mining-into-twenty18.html
@@ -71,7 +71,7 @@
           </div>
           <div>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/computers.html" title="All articles with #Computers tag">##computers</a>
+              <a href="/tag/computers.html" title="All articles with Computers tag">#computers</a>
             </span>
           </div>
         </div>
