--- a/output/welcome-to-my-site.html
+++ b/output/welcome-to-my-site.html
@@ -76,6 +76,9 @@
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
               <a href="/tag/worklife.html" title="All articles with Worklife tag">#worklife</a>
             </span>
+            <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
+              <a href="/tag/website.html" title="All articles with Website tag">#website</a>
+            </span>
           </div>
         </div>
       </header>
