--- a/output/cardio-audio-jog-my-brain.html
+++ b/output/cardio-audio-jog-my-brain.html
@@ -60,7 +60,7 @@
 
 
 
-    <br><br><br>
+    <br>
 
     <article>
       <header class="w3-container col-main">
@@ -100,7 +100,8 @@
                 <a href=""><img style="width: 60px; height: 60px;" src="" onerror="this.src='theme/images/avatar.png'" alt="Avatar"></a>
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href=""><span id="author-name" class="w3-hover-text-dark-grey">Jorge Garcia</span></a>
-                  <p id="author-story">I'm a technology advisor and educator from</p>
+                  <p id="author-story">I'm a technology advisor and educator from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+                    <span id="intro-description">I like to break things down and make things.</p>
                 </div>
               </div>
             </div>
