updates to CV and Library

--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -74,7 +74,7 @@
 
       <div class="col-main w3-container">
         <section id="content">
-          <h2>Contact Info</h2>
+          <h3>Contact Info</h3>
 <p><strong>e-mail and Hangouts:</strong> <a href="mailto:jorge@jorgegarcia.io">jorge@jorgegarcia.io</a></p>
 <p>@<strong>yorickgarcia</strong> everywhere publicly online. See icons at footer for links from popular sites.<br>
 <details style="margin-top:-1rem">
@@ -106,9 +106,49 @@
     </div>
 </details></p>
 <hr>
-<h2>CV</h2>
+<h3>CV</h3>
+<h4>Experience</h4>
+<h6>• Chicago Public Library – February 2013 to July 2019</h6>
+<p><strong>Maker Lab Specialist II – 2013-2019</strong><br>
+<sub>Senior lab specialist leading special projects and new library initiatives. Facilitation of library programming, professional development for staff, outreach events, media representation, data reporting, advise on hardware and software updates. Day-to-day duties including but not limited to; maintenance of digital fabrication machines, creating documentation, assisting patrons through design and fabrication, designing and leading workshops, providing one-on-one assistance for people seeking to improve digital literacy skills.</sub> </p>
+<p><strong>YOUmedia Lead Mentor – 2016-2019</strong><br>
+<sub>Mentor teens particularly in the topics of computer science and maker skills. Create and facilitate certification processes for using equipment like 3D printers, plotters, and robotics kits. Develop a foundation of tools to enable teens to explore interests such as computer hardware, microprocessors, computer programming, virtual reality, and more.</sub></p>
+<p><strong>Cyber Navigator – 2013</strong><br>
+<sub>Aid patrons develop and improve digital literacy skills by helping them tackle a range of individual technological obstacles or facilitate their explorations into software applications and processes for content creation.</sub></p>
+<p><strong>Library Page – 2013-2017</strong><br>
+<sub>Help sort, retrieve, and shelve books plus clerical work on the circulation desk.</sub></p>
+<h4>Projects</h4>
+<p><a href="https://www.chipublib.org/news/diy-mayor-harold-washington-bust/">CPL’s Special Collection Harold Washington Sculpture Digitization</a><br>
+<a href="http://makersinchicago.org/">MakersinChicago.org</a>  and <a href="https://twitter.com/makersinchicago">@makersinchicago</a><br>
+<a href="">MIT Media Lab’s SPIN</a> – <a href="http://spin.media.mit.edu/">Tiffany Tseng's Original</a>  </p>
+<h4>Outreach Events</h4>
+<p><strong>CPL Maker Lab Ambassador</strong><br>
+<sub>CPL Foundation’s Night at the Stacks – 2016, 2017, 2018<br>
+Pocket Con – 2014, 2015, 2016<br>
+LakeFX – 2015, 2016  </sub></p>
+<p><strong>Scratch &amp; Finch</strong><br>
+<sub>
+Make Take Teach Fair – 2016<br>
+Southside Chicago Mini Maker Fair – 2014, 2015, 2016<br>
+1000k Opportunities – 2015<br>
+Illinois Hispanic Business Expo – 2015<br>
+MIND Research Institute Math Fair – 2015<br>
+Gates Foundation HOMAGO at CPL – 2014<br>
+Google’s Geek Street – 2015<br>
+Tomorrow’s Technology Today – 2017, 2018  </sub></p>
+<p><strong>Media Appearances</strong><br>
+<sub>
+Chicago Tonight (WTTW) – CPL<br>
+You &amp; Me (WCUI) – Geek Street/Finch<br>
+Around Town (WGN) – Circulating Tech/Finch<br>
+Nerdologues (Podcast) – Maker Lab<br>
+Pop Up Youth Radio (Podcast) – Maker Lab/Finch<br>
+Gadget Guide (Chicago Tribune) – Reviewer<br>
+</sub></p>
 <hr>
-<p><a href="tbd">Personal Bio</a></p>
+<h3>Personal Bio</h3>
+<p><a href="../bio">Link</a></p>
+<hr>
         </section>
         
 
