--- a/output/pages/library.html
+++ b/output/pages/library.html
@@ -74,7 +74,8 @@
 
       <div class="col-main w3-container">
         <section id="content">
-          <p>This is where my files lives, free for all to use.</p>
+          <p><a href="https://www.facebook.com/jyorickgarcia/posts/10157509830625524">Mixed Material Raspberyy Pi enclosure</a> – <a href="https://www.facebook.com/jyorickgarcia/posts/10157467574870524">Proccess</a> – Files</p>
+<p>This is where my files lives, free for all to use.</p>
         </section>
         
 
