about and Header updates

--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -108,14 +108,14 @@
 <hr>
 <h3>CV</h3>
 <h4>Experience</h4>
-<h6>• Chicago Public Library – February 2013 to July 2019</h6>
-<p><strong>Maker Lab Specialist II – 2013-2019</strong><br>
+<h6><strong>Chicago Public Library</strong> – February 2013 to July 2019</h6>
+<p><strong>CPL Maker Lab - Maker Specialist II</strong> – 2013-2019<br>
 <sub>Senior lab specialist leading special projects and new library initiatives. Facilitation of library programming, professional development for staff, outreach events, media representation, data reporting, advise on hardware and software updates. Day-to-day duties including but not limited to; maintenance of digital fabrication machines, creating documentation, assisting patrons through design and fabrication, designing and leading workshops, providing one-on-one assistance for people seeking to improve digital literacy skills.</sub> </p>
-<p><strong>YOUmedia Lead Mentor – 2016-2019</strong><br>
+<p><strong>YOUmedia Chicago - Lead Mentor</strong> – 2016-2019<br>
 <sub>Mentor teens particularly in the topics of computer science and maker skills. Create and facilitate certification processes for using equipment like 3D printers, plotters, and robotics kits. Develop a foundation of tools to enable teens to explore interests such as computer hardware, microprocessors, computer programming, virtual reality, and more.</sub></p>
-<p><strong>Cyber Navigator – 2013</strong><br>
+<p><strong>Cyber Navigator</strong> – 2013<br>
 <sub>Aid patrons develop and improve digital literacy skills by helping them tackle a range of individual technological obstacles or facilitate their explorations into software applications and processes for content creation.</sub></p>
-<p><strong>Library Page – 2013-2017</strong><br>
+<p><strong>Library Page</strong> – 2013-2017<br>
 <sub>Help sort, retrieve, and shelve books plus clerical work on the circulation desk.</sub></p>
 <h4>Projects</h4>
 <p><a href="https://www.chipublib.org/news/diy-mayor-harold-washington-bust/">CPL’s Special Collection Harold Washington Sculpture Digitization</a><br>
