--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -26,7 +26,7 @@
 
     <!-- Feed -->
 
-    <!-- CSS -->
+    <!-- CSS --> 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:regular,bold">
     <link rel="stylesheet" type="text/css" href="/theme/css/w3.css">
     <link rel="stylesheet" type="text/css" href="/theme/css/style.css">
@@ -35,6 +35,7 @@
     <link rel="stylesheet" type="text/css" href="/theme/css/pygments-highlight-github.css">
 
     <!-- Icon -->
+    <link rel="shortcut icon" type="image/x-icon" href="/theme/images/favicon.png">
 
     <!-- JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -48,9 +49,9 @@
         <nav id="header-menu">
           <ul>
             <li class="w3-bottombar w3-border-white w3-hover-border-green" ><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/gallery.html">gallery</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about.html">about</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/gallery">gallery</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/library">library</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about">about</a></li>
           </ul>
         </nav>
       </header>
@@ -74,7 +75,7 @@
 
       <div class="col-main w3-container">
         <section id="content">
-          <h3>Contact Info</h3>
+          <h2>Contact Info</h2>
 <p><strong>e-mail and Hangouts:</strong> <a href="mailto:jorge@jorgegarcia.io">jorge@jorgegarcia.io</a></p>
 <p>@<strong>yorickgarcia</strong> everywhere publicly online. See icons at footer for links from popular sites.<br>
 <details style="margin-top:-1rem">
@@ -106,22 +107,23 @@
     </div>
 </details></p>
 <hr>
-<h3>CV</h3>
-<h4>Experience</h4>
-<h6><strong>Chicago Public Library</strong> – February 2013 to July 2019</h6>
+<h2>CV</h2>
+<h3>Experience</h3>
+<h5><strong>Chicago Public Library</strong> – February 2013 to July 2019</h5>
 <p><strong>CPL Maker Lab - Maker Specialist II</strong> – 2013-2019<br>
 <sub>Senior lab specialist leading special projects and new library initiatives. Facilitation of library programming, professional development for staff, outreach events, media representation, data reporting, advise on hardware and software updates. Day-to-day duties including but not limited to; maintenance of digital fabrication machines, creating documentation, assisting patrons through design and fabrication, designing and leading workshops, providing one-on-one assistance for people seeking to improve digital literacy skills.</sub> </p>
 <p><strong>YOUmedia Chicago - Lead Mentor</strong> – 2016-2019<br>
-<sub>Mentor teens particularly in the topics of computer science and maker skills. Create and facilitate certification processes for using equipment like 3D printers, plotters, and robotics kits. Develop a foundation of tools to enable teens to explore interests such as computer hardware, microprocessors, computer programming, virtual reality, and more.</sub></p>
+<sub>
+Mentor teens particularly in the topics of computer science and maker skills. Create and facilitate certification processes for using equipment like 3D printers, plotters, and robotics kits. Develop a foundation of tools to enable teens to explore interests such as computer hardware, microprocessors, computer programming, virtual reality, and more.</sub></p>
 <p><strong>Cyber Navigator</strong> – 2013<br>
 <sub>Aid patrons develop and improve digital literacy skills by helping them tackle a range of individual technological obstacles or facilitate their explorations into software applications and processes for content creation.</sub></p>
 <p><strong>Library Page</strong> – 2013-2017<br>
 <sub>Help sort, retrieve, and shelve books plus clerical work on the circulation desk.</sub></p>
-<h4>Projects</h4>
+<h3>Projects</h3>
 <p><a href="https://www.chipublib.org/news/diy-mayor-harold-washington-bust/">CPL’s Special Collection Harold Washington Sculpture Digitization</a><br>
 <a href="http://makersinchicago.org/">MakersinChicago.org</a>  and <a href="https://twitter.com/makersinchicago">@makersinchicago</a><br>
 <a href="">MIT Media Lab’s SPIN</a> – <a href="http://spin.media.mit.edu/">Tiffany Tseng's Original</a>  </p>
-<h4>Outreach Events</h4>
+<h3>Outreach</h3>
 <p><strong>CPL Maker Lab Ambassador</strong><br>
 <sub>CPL Foundation’s Night at the Stacks – 2016, 2017, 2018<br>
 Pocket Con – 2014, 2015, 2016<br>
@@ -146,8 +148,8 @@ Pop Up Youth Radio (Podcast) – Maker Lab/Finch<br>
 Gadget Guide (Chicago Tribune) – Reviewer<br>
 </sub></p>
 <hr>
-<h3>Personal Bio</h3>
-<p><a href="../bio">Link</a></p>
+<h2>Personal Bio</h2>
+<p><a href="/pages/bio">Link</a></p>
 <hr>
         </section>
         
