--- a/output/some-of-my-best-friends-are-androids.html
+++ b/output/some-of-my-best-friends-are-androids.html
@@ -28,7 +28,7 @@
 
     <!-- Feed -->
 
-    <!-- CSS -->
+    <!-- CSS --> 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:regular,bold">
     <link rel="stylesheet" type="text/css" href="/theme/css/w3.css">
     <link rel="stylesheet" type="text/css" href="/theme/css/style.css">
@@ -37,6 +37,7 @@
     <link rel="stylesheet" type="text/css" href="/theme/css/pygments-highlight-github.css">
 
     <!-- Icon -->
+    <link rel="shortcut icon" type="image/x-icon" href="/theme/images/favicon.png">
 
     <!-- JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -50,9 +51,9 @@
         <nav id="header-menu">
           <ul>
             <li class="w3-bottombar w3-border-white w3-hover-border-green" style="font-weight: bold;"><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/gallery.html">gallery</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/library.html">library</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about.html">about</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/gallery">gallery</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/library">library</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about">about</a></li>
           </ul>
         </nav>
       </header>
