--- a/output/cardio-audio-jog-my-brain.html
+++ b/output/cardio-audio-jog-my-brain.html
@@ -72,10 +72,7 @@
           </div>
           <div>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/gram.html" title="All articles with Gram tag">#gram</a>
-            </span>
-            <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/bikeride.html" title="All articles with Bikeride tag">#bikeride</a>
+              <a href="/tag/thoughts.html" title="All articles with Thoughts tag">#thoughts</a>
             </span>
           </div>
         </div>
