--- a/output/finch-dreams-how-might-we-train-equip-our-staff-with-skills-to-support-new-non-traditional-circulating-materials.html
+++ b/output/finch-dreams-how-might-we-train-equip-our-staff-with-skills-to-support-new-non-traditional-circulating-materials.html
@@ -72,10 +72,10 @@
           </div>
           <div>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/projects.html" title="All articles with Projects tag">#projects</a>
+              <a href="/tag/research.html" title="All articles with Research tag">#research</a>
             </span>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/staffdevelopment.html" title="All articles with Staffdevelopment tag">#staffdevelopment</a>
+              <a href="/tag/teachings.html" title="All articles with Teachings tag">#teachings</a>
             </span>
           </div>
         </div>
