--- a/output/jottings-from-the-gathering-scratch-2018.html
+++ b/output/jottings-from-the-gathering-scratch-2018.html
@@ -74,6 +74,9 @@
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
               <a href="/tag/notes.html" title="All articles with Notes tag">#notes</a>
             </span>
+            <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
+              <a href="/tag/scratch.html" title="All articles with Scratch tag">#scratch</a>
+            </span>
           </div>
         </div>
       </header>
