--- a/output/saving-the-planet-a-stroll-with-the-boys.html
+++ b/output/saving-the-planet-a-stroll-with-the-boys.html
@@ -72,13 +72,10 @@
           </div>
           <div>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/crafts.html" title="All articles with Crafts tag">#crafts</a>
+              <a href="/tag/community.html" title="All articles with Community tag">#community</a>
             </span>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
               <a href="/tag/sons.html" title="All articles with Sons tag">#sons</a>
-            </span>
-            <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/good.html" title="All articles with Good tag">#good</a>
             </span>
           </div>
         </div>
