new pages and blog temp removed

--- a/output/pages/projects.html
+++ b/output/pages/projects.html
@@ -48,8 +48,6 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green" ><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/gallery">Gallery</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/projects">Projects</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about">About</a></li>
           </ul>
@@ -75,19 +73,18 @@
 
       <div class="col-main w3-container">
         <section id="content">
-          <h4>Featured</h4>
-<p><a href="">Digitizing Harold Washingston's Bust</a><br>
+          <h4>⭐ ⭐ ⭐ ⭐</h4>
+<p><a href="https://www.chipublib.org/news/diy-mayor-harold-washington-bust/">Special Collection Digitization: Harold Washingston's Bust</a><br>
 <a href="http://makersinchicago.org">MakersinChicago.org</a><br>
 <a href="">MIT Media Lab’s SPIN</a> – <a href="http://spin.media.mit.edu/">Tiffany Tseng's Original</a><br>
-<a href="">Scratch &amp; Finch</a><br>
-<a href="">Voight Kampft Test</a></p>
-<h4>Guides</h4>
-<p>Gettings Started with the Finch Robot  </p>
+<a href="https://drive.google.com/drive/folders/0B8QHDZo-SrgETkpTMXdfX1E4Yjg">Scratch &amp; Finch</a><br>
+<a href="/game-of-life-java">The Game of Life - Java</a>
+<a href="/voight-kampft-test-java">Voight Kampft Test - Java Command Line Game</a></p>
 <h4>File Library</h4>
-<p><a href="/3d-models">3D Models</a><br>
-<a href="">Raster Art</a><br>
-<a href="">Sketches</a><br>
-<a href="">Vector</a>  </p>
+<p><a href="2d-files">2D Fabrication</a><br>
+<a href="3d-files">3D Fabrication</a><br>
+<a href="graphics">Graphic Design</a><br>
+<a href="sketches">Sketches</a>  </p>
 <h4>Personal Builds</h4>
 <p>2011 Trek Earl - Bike<br>
 HTPC Ryzen - PC<br>
