--- a/output/index.html
+++ b/output/index.html
@@ -48,8 +48,6 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green" ><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/gallery">Gallery</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/projects">Projects</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about">About</a></li>
           </ul>
@@ -64,8 +62,8 @@
           <br><br>
           <span id="intro-description">That's Jorge like forge or gorge.</span>
           <div style="max-width: 860px">
-          <span id="intro-description">I'm a technology advisor and educator from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
-          <span id="intro-description">I like to break things down and make things.</span>
+          <span id="intro-description">I'm a maker culture expert from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+          <span id="intro-description">I make, break, and fix things– teaching along the way.</span>
           <br><br>
           <span id="intro-description">To best reach me, shoot me an <a style="color: #673ab7" href="http://makersinchicago.org">email</a></span>
           <span id="intro-description">or send me a text.</span>
