--- a/output/jottings-from-the-gathering-scratch-2018.html
+++ b/output/jottings-from-the-gathering-scratch-2018.html
@@ -50,8 +50,6 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-green" style="font-weight: bold;"><a href="/category/blog.html">Blog</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/gallery">Gallery</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/projects">Projects</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about">About</a></li>
           </ul>
@@ -111,8 +109,8 @@
                 <a href=""><img style="width: 60px; height: 60px;" src="" onerror="this.src='theme/images/avatar.png'" alt="Avatar"></a>
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href=""><span id="author-name" class="w3-hover-text-dark-grey">Jorge Garcia</span></a>
-                  <p id="author-story">I'm a technology advisor and educator from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
-                    <span id="intro-description">I like to break things down and make things.</p>
+                  <p id="author-story">I'm a maker culture expert from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+                    <span id="intro-description">I make, break, and fix things– teaching along the way.</p>
                 </div>
               </div>
             </div>
